# decision-page-skill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
examples/demo/: decisions.json
templates/: decide.py  decisions.html
